@@ -59,6 +59,16 @@ class SaleProduct(models.Model):
                                                    (ZHEBABAI,u'折800'),
                                                    (XIAOHER,u'小荷特卖'),)
     
+    WAIT = 'wait'
+    SELECT = 'select'
+    PURCHASE = 'purchase'
+    INVALID     = 'invalid'
+    STATUS_CHOICES = ((WAIT,u'待选'),
+                               (SELECT,u'初选'),
+                               (PURCHASE,u'通过'),
+                               (INVALID,u'淘汰'),)
+
+    
     outer_id  =  models.CharField(max_length=64, blank=True,verbose_name=u'外部ID')
     title           =  models.CharField(max_length=64, blank=True,db_index=True,verbose_name=u'标题')
     price         =  models.FloatField(default=0,verbose_name=u'价格')
@@ -68,7 +78,10 @@ class SaleProduct(models.Model):
     sale_supplier     = models.ForeignKey(SaleSupplier,null=True,related_name='suppliers',verbose_name=u'供货商')
     sale_category    = models.ForeignKey(SaleCategory,null=True,related_name='categories',verbose_name=u'类别')
     platform             = models.CharField(max_length=16,blank=True,
-                                            choices=PLATFORM_CHOICE,verbose_name='来自平台')
+                                            choices=PLATFORM_CHOICE,verbose_name=u'来自平台')
+    
+    status       = models.CharField(max_length=16,blank=True,
+                                            choices=STATUS_CHOICES,default=WAIT,verbose_name=u'状态')
     
     created    = models.DateTimeField(auto_now_add=True,verbose_name=u'创建日期')
     modified   = models.DateTimeField(auto_now=True,verbose_name=u'修改日期')
